--- a/src/index.css
+++ b/src/index.css
@@ -1,184 +1,13 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Header */
-header {
-  padding: 20px 35px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;    
-}
-header h1 {
-  font-weight: bold;
-  font-size: 36px;
-  color: white;
-  margin: 0;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);     
-}
-header a {
-  text-decoration: none;
-  color: white;
-}
-header nav {      
-  margin: 7px 0;
-}
-header nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-}
-header nav ul li a {
-  padding: 10px 15px;
-  font-weight: lightger;
-  font-size: 1.55vw;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-header nav ul li a:hover {
-background: black;
-border-radius: 15px;
-text-shadow: none;
-}
-
-/* Footer */
-footer {
-  background: rgba(0, 0, 0, .9);
-  width: 100%;
-  padding: 20px 35px;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-footer div {
-  line-height: 1.5;
-  text-align: right;
-  color: white
-}
-
-h2 {
-  font-size: 30px;
-  color: white;    
-  text-decoration: underline;
-  display: flex;
-  justify-content: center;
-  padding: 20px;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}  
-
-/* About Me */
-.me {
-  margin: 0px auto;
-  width: 60%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: rgba(210,180,140,.9);
-  border-radius: 15px;
-}
-.me img {
-  width: 100%;
-  height: auto; 
-  display: flex;
-  border-radius: 15px 0 0 15px;
-}
-
-.me p {
-  font-size: 25px;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  padding: 10px;
-  text-align: center;
-  color: white;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-/* Work */
-.works {
-  display: flex;
-  flex: wrap;
-  justify-content: space-around;
-  background-color: rgba(210,180,140,.9);
-}
-
-.works h3 {
-  display: flex;
-  padding: 20px 0 0 0;
-  justify-content: center;
-}
-
-.works img {
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 300px; 
-}
-
-.works img:hover {
-  box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5);
-}
-
-
-/* Contact */
-
-.contact {
-  color: white;
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  padding: 20px 0;
-  background-color: rgba(210,180,140,.9);
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
-}
-
-.contact li{
-  list-style: none;
-}
-.contact a {
-  text-decoration: none;
-  color: white;
-}
-
-@media screen and (max-width: 980px) {
-  header nav ul li a {
-  font-size: 2vw;
+@layer base {
+  body {
+    @apply bg-fixed bg-center bg-cover bg-page-background bg-blend-multiply;
   }
-  .me p {
-      font-size: 21px;
-  }
-  h2 {
-      font-size: 28px;
-  }
-}
 
-@media screen and (max-width: 768px) {
-  header nav ul li a {
-      font-size: 2.5vw;
-  }
-  .me {
-      flex-direction: column;
-  }
-  .works {
-      flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  header nav ul li a {
-      font-size: 3vw;
+  p {
+    @apply py-2;
   }
 }
